navbar_publishing_finished

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="navbar_route_menu">
               <div class="router_menu">
-                <a href="">Home</a>
+                <a class="active">Home</a>
               </div>
               <div class="router_menu">
                 <a href="">Shop</a>
@@ -93,7 +93,12 @@
                 <a href="">Contact</a>
               </div>
             </div>
-            <div class="sorting_menu"></div>
+            <div class="sorting_menu">
+              <span>Deal of the day</span>
+              <span>Hot deals</span>
+              <span>Best sellers</span>
+              <span>New arrivals</span>
+            </div>
           </div>
         </div>
       </div>
