--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/public/CSS/command.css" />
-    <link rel="stylesheet" href="/public/CSS/home.css" />
+    <link rel="stylesheet" href="./public/CSS/command.css" />
+    <link rel="stylesheet" href="./public/CSS/home.css" />
   </head>
   <body>
     <div class="navbar_frame">
       <div class="container">
         <div class="navbar_top">
           <a href="">
-            <img src="/public/images/Zenmart. (1).png" alt="" />
+            <img src="./public/images/Zenmart. (1).png" alt="" />
           </a>
           <div class="nav_search_frame">
             <div class="search_box">
@@ -31,7 +31,7 @@
               <input type="search" placeholder="Search products..." />
             </div>
             <div class="search_icon_box">
-              <img src="/public/images/circle2017.svg" alt="" />
+              <img src="./public/images/circle2017.svg" alt="" />
             </div>
           </div>
           <div class="nav_top_menu">
@@ -49,7 +49,7 @@
             <a href="">
               <div class="top_menu_box">
                 <div class="box_icon_box">
-                  <img src="public/images/odamcha.svg" alt="" />
+                  <img src="./public/images/odamcha.svg" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>Sign in</span>
@@ -60,7 +60,7 @@
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <div class="bascket_count">2</div>
-                  <img src="public/images/savat.png" alt="" />
+                  <img src="./public/images/savat.png" alt="" />
                 </div>
                 <div class="box_info_box">
                   <span>$200.99</span>
@@ -98,6 +98,45 @@
               <span>Hot deals</span>
               <span>Best sellers</span>
               <span>New arrivals</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="home_page">
+      <div class="header_frame">
+        <div class="container">
+          <div class="header_left">
+            <div class="header_content">
+              <div>Special Offer</div>
+              <span>Immersive Entertainment</span>
+              <p>Discover our new items. Up to 25% Off !</p>
+              <a href="">Shop Now</a>
+              <img src="./public/images/Shop/image 12.svg" alt="" />
+            </div>
+          </div>
+          <div class="header_right">
+            <div class="header_box">
+              <div class="box_left">
+                <span>Starting from 899$</span>
+                <p>Health Care Monitor</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <div class="box_right">
+                <img src="/public/images/Shop/image 6.svg" alt="" />
+              </div>
+            </div>
+            <div class="header_box">
+              <div class="box_left">
+                <span>Starting from 899$</span>
+                <p>Hanpicked Headphones</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <div class="box_right">
+                <img src="/public/images/Shop/image 11.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
