--- a/index.html
+++ b/index.html
@@ -141,6 +141,38 @@
           </div>
         </div>
       </div>
+      <div class="servic_frame">
+        <div class="container">
+          <div class="servic_box">
+            <img src="./public/images/Shop/fast-delivery 1.svg" alt="" />
+            <div class="servic_content">
+              <span>Free Shipping</span>
+              <p>Free Shipping for orders over $200</p>
+            </div>
+          </div>
+          <div class="servic_box">
+            <img src="./public/images/Shop/shield 1.svg" alt="" />
+            <div class="servic_content">
+              <span>Money Guarantee</span>
+              <p>Within 30 days for an exchange.</p>
+            </div>
+          </div>
+          <div class="servic_box">
+            <img src="./public/images/Shop/headphones 1.svg" alt="" />
+            <div class="servic_content">
+              <span>Online Support</span>
+              <p>24 hours a day, 7 days a week</p>
+            </div>
+          </div>
+          <div class="servic_box">
+            <img src="./public/images/Shop/credit-card 1.svg" alt="" />
+            <div class="servic_content">
+              <span>Flexible Payment</span>
+              <p>Pay with Multiple Credit Cards</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
