--- a/index.html
+++ b/index.html
@@ -173,6 +173,52 @@
           </div>
         </div>
       </div>
+      <div class="shop_category_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>Shop by Categories</span>
+            <a href="">View All Categories</a>
+          </div>
+          <div class="category_wrapper">
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="./public/images/Shop/tv.png" alt="" />
+              </div>
+              <span>TVs, Home Theatre, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="./public/images/Shop/komp.png" alt="" />
+              </div>
+              <span>Computers, Tablets, and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="./public/images/Shop/pler.png" alt="" />
+              </div>
+              <span>Smart Home</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="./public/images/Shop/naushnik.png" alt="" />
+              </div>
+              <span>Headphones and Portable Speakers</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="./public/images/Shop/iphone.png" alt="" />
+              </div>
+              <span>Cell Phones and Accessories</span>
+            </div>
+            <div class="category_box">
+              <div class="category_image_box">
+                <img src="./public/images/Shop/jostic.png" alt="" />
+              </div>
+              <span>Video Games, Consoles, and Accessories</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
