feat: complated top selling product section view

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <span>Starting from 899$</span>
                 <p>Hanpicked Headphones</p>
                 <a href="">Shop Now</a>
-                <div class="hover_border"></div>
+                <div class="hover_border_2"></div>
               </div>
               <div class="box_right">
                 <img src="/public/images/Shop/image 11.png" alt="" />
@@ -217,6 +217,171 @@
               <span>Video Games, Consoles, and Accessories</span>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="selling_product_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>Top Selling Products</span>
+            <a href="">View All</a>
+          </div>
+          <div class="product_wrapper">
+            <div class="next_prev_box">
+              <img src="./public/images/Shop/Arrows-1.png" alt="" />
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url(./public/images/Shop/smart\ watch.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url(./public/images/Shop/iphone11.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">APPLE</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Apple iPhone 11 64GB Smartphone - Black.
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url(./public/images/Shop/zaryadchik.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>399$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="product_boxes">
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_image_box"
+                    style="
+                      background: url(./public/images/Shop/plesos.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Card</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="next_prev_box" style="transform: scaleX(-1)">
+              <img src="./public/images/Shop/Arrows-1.png" alt="" />
+            </div>
+          </div>
+          <div class="product_pagination_box"></div>
         </div>
       </div>
     </div>
