--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
             <a href="">View All</a>
           </div>
           <div class="product_wrapper">
-            <div class="next_prev_box">
-              <img src="./public/images/Shop/Arrows-1.png" alt="" />
+            <div class="next_prev_box" style="transform: scaleX(-1)">
+              <img src="./public/images/Shop/next 1.png" alt="" />
             </div>
             <div class="product_boxes">
               <div class="product_box">
@@ -381,7 +381,22 @@
               <img src="./public/images/Shop/Arrows-1.png" alt="" />
             </div>
           </div>
-          <div class="product_pagination_box"></div>
+          <div class="pagination_box">
+            <div class="pagination_main">
+              <img src="./public/images/Shop/arrow-right.svg" alt="" />
+              <div class="pagination_dot">
+                <div class="dot">
+                  <img src="./public/images/Shop/bullets.png" alt="" />
+                  <div></div>
+                </div>
+              </div>
+              <img
+                src="./public/images/Shop/arrow-right.svg"
+                alt=""
+                style="transform: scaleX(-1)"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
