feat: compleated spec product section view

--- a/index.html
+++ b/index.html
@@ -403,6 +403,55 @@
         Members get free shipping* with no order minimum!*Restrictions apply.Try
         free 30-day trial
       </div>
+      <div class="spec_product_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>headphones</span>
+            <a href="">View All Categories</a>
+          </div>
+          <div class="spec_product_wrapper">
+            <div class="big_product_box">
+              <div class="big_product_content">
+                <span>Now in moon gray</span>
+                <p>Beats Studio Buds</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <img src="./public/images/Shop/BLUETOTH.png" alt="" />
+            </div>
+            <div class="smaall_product_wrapper">
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>Over-Ear</strong>
+                  <span>29 items</span>
+                </div>
+                <img src="./public/images/Shop/sony naushnik.png" alt="" />
+              </div>
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>On-Ear</strong>
+                  <span>29 items</span>
+                </div>
+                <img src="./public/images/Shop/komp naushnik.png" alt="" />
+              </div>
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>Sports & Fitness</strong>
+                  <span>29 items</span>
+                </div>
+                <img src="./public/images/Shop/fitness naushnik.png" alt="" />
+              </div>
+              <div class="small_product_box">
+                <div class="small_product_content">
+                  <strong>Bluetooth Headphones</strong>
+                  <span>29 items</span>
+                </div>
+                <img src="./public/images/Shop/ikkitalik naushnik.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
