feat: complated tv section view

--- a/index.html
+++ b/index.html
@@ -452,6 +452,181 @@
           </div>
         </div>
       </div>
+      <div class="tv_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>TV & Home Theatre</span>
+            <div>
+              <a href="">Televisions</a>
+              <a href="">Digital cabels</a>
+              <a href="">Media streamers</a>
+              <a href="">Remote controls</a>
+            </div>
+          </div>
+          <div class="tv_wrapper">
+            <div class="next_prev_box" style="transform: scaleX(-1)">
+              <img src="./public/images/Shop/next 1.png" alt="" />
+            </div>
+            <div class="tv_product_boxes">
+              <div class="tv_product_box">
+                <div class="product_image">
+                  <a href="">
+                    <img src="./public/images/Shop/tv1.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Samsung 58" 4K UHD HDR LED Tizen Smart TV
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_image">
+                  <a href="">
+                    <img src="./public/images/Shop/tv2.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      TCL 3-Series 40" 1080p HD LED Android Smart TV 
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_image">
+                  <a href="">
+                    <img src="./public/images/Shop/tv3.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      LG 65" 4K UHD HDR LED webOS Smart TV
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_image">
+                  <a href="">
+                    <img src="./public/images/Shop/tv4.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      LG 55" 4K UHD HDR OLED webOS Smart TV 
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+              <div class="tv_product_box">
+                <div class="product_image">
+                  <a href="">
+                    <img src="./public/images/Shop/tv5.png" alt="" />
+                  </a>
+                </div>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Sony X85J 65" 4K UHD HDR LED Smart Google TV 
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="next_prev_box" /*/ tyle="transform: scaleX(-1)">
+              <img src="./public/images/Shop/next 1.png" alt="" />
+            </div>
+          </div>
+          <div class="pagination_box">
+            <div class="pagination_main">
+              <img src="./public/images/Shop/arrow-right.svg" alt="" />
+              <div class="pagination_dot">
+                <div class="dot">
+                  <img src="./public/images/Shop/bullets.png" alt="" />
+                  <div></div>
+                </div>
+              </div>
+              <img
+                src="./public/images/Shop/arrow-right.svg"
+                alt=""
+                style="transform: scaleX(-1)"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
