--- a/index.html
+++ b/index.html
@@ -627,6 +627,140 @@
           </div>
         </div>
       </div>
+      <div class="event_frame">
+        <div class="container">
+          <div class="event_content_box">
+            <span class="event_title">Top Deals Of The Day</span>
+            <div class="timer_wrapper">
+              <div class="timer_box">
+                <strong>178</strong>
+                <span>Days</span>
+              </div>
+              <div class="timer_box">
+                <strong>23</strong>
+                <span>Hours</span>
+              </div><div class="timer_box">
+                <strong>34</strong>
+                <span>Minutes</span>
+              </div><div class="timer_box">
+                <strong>39</strong>
+                <span>Seconds</span>
+              </div>
+            </div>
+            <a href="">Show More</a>
+          </div>
+          <div class="event_product_wrapper">
+            <div class="next_prev_box" >
+              <img src="./public/images/Shop/next 1 (1).png" class="white_png" />
+            </div>
+            <div class="event_product_boxes">
+              <div class="event_product_box">
+                <div class="event_product_images">
+                  <a href=""><img src="./public/images/Shop/notebook.png" alt=""></a>
+                </div>
+                <div class="product_content_box" style="padding: 0 0 0 10px;">
+                  <span class="product_title">sony</span>
+                  <a href="">
+                    <p class="product_disc">
+                      SAMSUNG Chromebook 4+ 15.6" Intel® 
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+              <div class="event_product_box">
+                <div class="event_product_images">
+                  <a href=""><img src="./public/images/Shop/pc5.png" alt=""></a>
+                </div>
+                <div class="product_content_box" style="padding: 0 0 0 10px;">
+                  <span class="product_title">sony</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Sony PlayStation 5 Video Game Console
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div> <div class="event_product_box">
+                <div class="event_product_images">
+                  <a href=""><img src="./public/images/Shop/smart_watch22.png" alt=""></a>
+                </div>
+                <div class="product_content_box" style="padding: 0 0 0 10px;">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Apple Watch Series 3 GPS Space Gray - 38mm 
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div> <div class="event_product_box">
+                <div class="event_product_images">
+                  <a href=""><img src="./public/images/Shop/canon.png" alt=""></a>
+                </div>
+                <div class="product_content_box" style="padding: 0 0 0 10px;">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_disc">
+                      Canon EOS Rebel T100 Digital SLR Camera with.
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                    <span>3,014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>35$</span>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+            
+            <div class="next_prev_box" yle="margin-right: 11px;" >
+              <img src="./public/images/Shop/next 1.png" class ="white_png" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
