feat: complated footer selection view

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     />
     <link rel="stylesheet" href="./public/CSS/command.css" />
     <link rel="stylesheet" href="./public/CSS/home.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="navbar_frame">
@@ -505,7 +512,7 @@
                   <span class="product_title">Eastsport</span>
                   <a href="">
                     <p class="product_disc">
-                      TCL 3-Series 40" 1080p HD LED Android Smart TV 
+                      TCL 3-Series 40" 1080p HD LED Android Smart TV
                     </p>
                   </a>
                   <div class="review_box">
@@ -559,7 +566,7 @@
                   <span class="product_title">Eastsport</span>
                   <a href="">
                     <p class="product_disc">
-                      LG 55" 4K UHD HDR OLED webOS Smart TV 
+                      LG 55" 4K UHD HDR OLED webOS Smart TV
                     </p>
                   </a>
                   <div class="review_box">
@@ -586,7 +593,7 @@
                   <span class="product_title">Eastsport</span>
                   <a href="">
                     <p class="product_disc">
-                      Sony X85J 65" 4K UHD HDR LED Smart Google TV 
+                      Sony X85J 65" 4K UHD HDR LED Smart Google TV
                     </p>
                   </a>
                   <div class="review_box">
@@ -606,157 +613,267 @@
             </div>
 
             <div class="next_prev_box" /*/ tyle="transform: scaleX(-1)">
-              <img src="./public/images/Shop/next 1.png" alt="" />
-            </div>
+            <img src="./public/images/Shop/next 1.png" alt="" />
           </div>
-          <div class="pagination_box">
-            <div class="pagination_main">
-              <img src="./public/images/Shop/arrow-right.svg" alt="" />
-              <div class="pagination_dot">
-                <div class="dot">
-                  <img src="./public/images/Shop/bullets.png" alt="" />
-                  <div></div>
-                </div>
+        </div>
+        <div class="pagination_box">
+          <div class="pagination_main">
+            <img src="./public/images/Shop/arrow-right.svg" alt="" />
+            <div class="pagination_dot">
+              <div class="dot">
+                <img src="./public/images/Shop/bullets.png" alt="" />
+                <div></div>
               </div>
-              <img
-                src="./public/images/Shop/arrow-right.svg"
-                alt=""
-                style="transform: scaleX(-1)"
-              />
             </div>
+            <img
+              src="./public/images/Shop/arrow-right.svg"
+              alt=""
+              style="transform: scaleX(-1)"
+            />
           </div>
         </div>
       </div>
-      <div class="event_frame">
-        <div class="container">
-          <div class="event_content_box">
-            <span class="event_title">Top Deals Of The Day</span>
-            <div class="timer_wrapper">
-              <div class="timer_box">
-                <strong>178</strong>
-                <span>Days</span>
-              </div>
-              <div class="timer_box">
-                <strong>23</strong>
-                <span>Hours</span>
-              </div><div class="timer_box">
-                <strong>34</strong>
-                <span>Minutes</span>
-              </div><div class="timer_box">
-                <strong>39</strong>
-                <span>Seconds</span>
-              </div>
+    </div>
+    <div class="event_frame">
+      <div class="container">
+        <div class="event_content_box">
+          <span class="event_title">Top Deals Of The Day</span>
+          <div class="timer_wrapper">
+            <div class="timer_box">
+              <strong>178</strong>
+              <span>Days</span>
             </div>
-            <a href="">Show More</a>
+            <div class="timer_box">
+              <strong>23</strong>
+              <span>Hours</span>
+            </div>
+            <div class="timer_box">
+              <strong>34</strong>
+              <span>Minutes</span>
+            </div>
+            <div class="timer_box">
+              <strong>39</strong>
+              <span>Seconds</span>
+            </div>
           </div>
-          <div class="event_product_wrapper">
-            <div class="next_prev_box" >
-              <img src="./public/images/Shop/next 1 (1).png" class="white_png" />
-            </div>
-            <div class="event_product_boxes">
-              <div class="event_product_box">
-                <div class="event_product_images">
-                  <a href=""><img src="./public/images/Shop/notebook.png" alt=""></a>
+          <a href="">Show More</a>
+        </div>
+        <div class="event_product_wrapper">
+          <div class="next_prev_box">
+            <img src="./public/images/Shop/next 1 (1).png" class="white_png" />
+          </div>
+          <div class="event_product_boxes">
+            <div class="event_product_box">
+              <div class="event_product_images">
+                <a href=""
+                  ><img src="./public/images/Shop/notebook.png" alt=""
+                /></a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px">
+                <span class="product_title">sony</span>
+                <a href="">
+                  <p class="product_disc">SAMSUNG Chromebook 4+ 15.6" Intel®</p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <span>3,014 reviews</span>
                 </div>
-                <div class="product_content_box" style="padding: 0 0 0 10px;">
-                  <span class="product_title">sony</span>
-                  <a href="">
-                    <p class="product_disc">
-                      SAMSUNG Chromebook 4+ 15.6" Intel® 
-                    </p>
-                  </a>
-                  <div class="review_box">
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <span>3,014 reviews</span>
-                  </div>
-                  <div class="price_box">
-                    <strong>32$</strong>
-                    <span>35$</span>
-                  </div>
+                <div class="price_box">
+                  <strong>32$</strong>
+                  <span>35$</span>
                 </div>
               </div>
-              <div class="event_product_box">
-                <div class="event_product_images">
-                  <a href=""><img src="./public/images/Shop/pc5.png" alt=""></a>
+            </div>
+            <div class="event_product_box">
+              <div class="event_product_images">
+                <a href=""><img src="./public/images/Shop/pc5.png" alt="" /></a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px">
+                <span class="product_title">sony</span>
+                <a href="">
+                  <p class="product_disc">
+                    Sony PlayStation 5 Video Game Console
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <span>3,014 reviews</span>
                 </div>
-                <div class="product_content_box" style="padding: 0 0 0 10px;">
-                  <span class="product_title">sony</span>
-                  <a href="">
-                    <p class="product_disc">
-                      Sony PlayStation 5 Video Game Console
-                    </p>
-                  </a>
-                  <div class="review_box">
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <span>3,014 reviews</span>
-                  </div>
-                  <div class="price_box">
-                    <strong>32$</strong>
-                    <span>35$</span>
-                  </div>
-                </div>
-              </div> <div class="event_product_box">
-                <div class="event_product_images">
-                  <a href=""><img src="./public/images/Shop/smart_watch22.png" alt=""></a>
-                </div>
-                <div class="product_content_box" style="padding: 0 0 0 10px;">
-                  <span class="product_title">Eastsport</span>
-                  <a href="">
-                    <p class="product_disc">
-                      Apple Watch Series 3 GPS Space Gray - 38mm 
-                    </p>
-                  </a>
-                  <div class="review_box">
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <span>3,014 reviews</span>
-                  </div>
-                  <div class="price_box">
-                    <strong>32$</strong>
-                    <span>35$</span>
-                  </div>
-                </div>
-              </div> <div class="event_product_box">
-                <div class="event_product_images">
-                  <a href=""><img src="./public/images/Shop/canon.png" alt=""></a>
-                </div>
-                <div class="product_content_box" style="padding: 0 0 0 10px;">
-                  <span class="product_title">Eastsport</span>
-                  <a href="">
-                    <p class="product_disc">
-                      Canon EOS Rebel T100 Digital SLR Camera with.
-                    </p>
-                  </a>
-                  <div class="review_box">
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <img src="./public/images/Shop/star (1) 2.png" alt="" />
-                    <span>3,014 reviews</span>
-                  </div>
-                  <div class="price_box">
-                    <strong>32$</strong>
-                    <span>35$</span>
-                  </div>
+                <div class="price_box">
+                  <strong>32$</strong>
+                  <span>35$</span>
                 </div>
               </div>
-              
             </div>
-            
-            <div class="next_prev_box" yle="margin-right: 11px;" >
-              <img src="./public/images/Shop/next 1.png" class ="white_png" />
+            <div class="event_product_box">
+              <div class="event_product_images">
+                <a href=""
+                  ><img src="./public/images/Shop/smart_watch22.png" alt=""
+                /></a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px">
+                <span class="product_title">Eastsport</span>
+                <a href="">
+                  <p class="product_disc">
+                    Apple Watch Series 3 GPS Space Gray - 38mm
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <span>3,014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>32$</strong>
+                  <span>35$</span>
+                </div>
+              </div>
+            </div>
+            <div class="event_product_box">
+              <div class="event_product_images">
+                <a href=""
+                  ><img src="./public/images/Shop/canon.png" alt=""
+                /></a>
+              </div>
+              <div class="product_content_box" style="padding: 0 0 0 10px">
+                <span class="product_title">Eastsport</span>
+                <a href="">
+                  <p class="product_disc">
+                    Canon EOS Rebel T100 Digital SLR Camera with.
+                  </p>
+                </a>
+                <div class="review_box">
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <img src="./public/images/Shop/star (1) 2.png" alt="" />
+                  <span>3,014 reviews</span>
+                </div>
+                <div class="price_box">
+                  <strong>32$</strong>
+                  <span>35$</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="next_prev_box" yle="margin-right: 11px;">
+            <img src="./public/images/Shop/next 1.png" class="white_png" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer_frame">
+      <div class="container">
+        <div class="footer_top">
+          <div class="footer_contact_box">
+            <span class="foter_spec_title">Contact us</span>
+            <div class="footer_contact_main">
+              <img src="./public/images/Shop/phone-call 1.svg" alt="" />
+              <div>
+                <strong>Monday-Friday: 08am-9pm</strong>
+                <span>+(1) 123 456 7890</span>
+              </div>
+            </div>
+            <div class="footer_contact_main">
+              <img src="./public/images/Shop/email 1.svg" alt="" />
+              <div>
+                <strong>Need help with your order?</strong>
+                <span>support@zenmart.com</span>
+              </div>
+            </div>
+          </div>
+          <div class="footer_support_box">
+            <span class="footer_spec_title" style="margin-bottom: 10px"
+              >Custumer Support</span
+            >
+            <a href="">Contact Us</a>
+            <a href="">Help Centre</a>
+            <a href="">Returns & Exchanges</a>
+            <a href="">Best Buy Financing</a>
+            <a href="">Best Buy Gift Card</a>
+          </div>
+          <div class="footer_support_box">
+            <span class="footer_spec_title" style="margin-bottom: 10px"
+              >Services</span
+            >
+            <a href="">Geek Squad</a>
+            <a href="">In-Home Advisor</a>
+            <a href="">Trade-In Program</a>
+            <a href="">Electronics Recycling</a>
+            <a href="">Best Buy Health</a>
+          </div>
+          <div class="footer_media_box">
+            <div class="footer_media_main">
+              <span class="footer_media_title">Follow us</span>
+              <div class="media_box">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+            </div>
+            <div class="footer_media_main">
+              <span class="footer_media_title" style="margin-top: 25px"
+                >Mobile Apps</span
+              >
+              <div class="media_app_box">
+                <img src="./public/images/Shop/apple 1.png" alt="" />
+                <span>iOS App</span>
+              </div>
+              <div class="media_app_box">
+                <img src="./public/images/Shop/android (1) 1.png" alt="" />
+                <span>Android App</span>
+              </div>
+            </div>
+          </div>
+          <div class="footer_media_box">
+            <div class="footer_media_main" style="margin-top: 130px">
+              <span class="footer_media_title">We Accept</span>
+              <div class="card_box">
+                <img src="./public/images/Shop/1 (1).png" alt="" />
+                <img src="./public/images/Shop/2.png" alt="" />
+                <img src="./public/images/Shop/3.png" alt="" />
+                <img src="./public/images/Shop/4.png" alt="" />
+                <img src="./public/images/Shop/5.png" alt="" />
+                <img src="./public/images/Shop/6.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_bottom">
+          <div class="footer_main">
+            <div class="footer_bottom_left">
+              <span>© 2022 Zenmart. All Rights Reserved</span>
+              <span>Privacy · Terms · Sitemap</span>
+            </div>
+            <div class="footer_bottom_right">
+              <div class="footer_select_box">
+                <span>Currency</span>
+                <select name="" id="">
+                  <option value="" selected>USD</option>
+                  <option>UZS</option>
+                </select>
+              </div>
+              <div class="footer_select_box">
+                <span>Language</span>
+                <select name="" id="">
+                  <option value="">English</option>
+                  <option selected>Uzbek</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
