--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="navbar_frame">
       <div class="container">
         <div class="navbar_top">
-          <a href="">
+          <a href="./order/card.html">
             <img src="./public/images/Zenmart. (1).png" alt="" />
           </a>
           <div class="nav_search_frame">
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="nav_top_menu">
-            <a href="">
+            <a href="./order/card.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="public/images/yurakch.svg" alt="" />
@@ -53,7 +53,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="./order/recived.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="./public/images/odamcha.svg" alt="" />
@@ -63,7 +63,7 @@
                   <strong>Account</strong>
                 </div>
               </div> </a
-            ><a href="">
+            ><a href="./order/recived.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <div class="bascket_count">2</div>
@@ -85,19 +85,19 @@
             </div>
             <div class="navbar_route_menu">
               <div class="router_menu">
-                <a class="active">Home</a>
+                <a href="./index.html" class="active">Home</a>
               </div>
               <div class="router_menu">
-                <a href="">Shop</a>
+                <a href="./products/all.html">Shop</a>
               </div>
               <div class="router_menu">
-                <a href="">Orders</a>
+                <a href="./order/card.html">Orders</a>
               </div>
               <div class="router_menu">
-                <a href="">About</a>
+                <a href="./other/about.html">About</a>
               </div>
               <div class="router_menu">
-                <a href="">Contact</a>
+                <a href="./other/contacts.html">Contact</a>
               </div>
             </div>
             <div class="sorting_menu">
@@ -118,7 +118,7 @@
               <div>Special Offer</div>
               <span>Immersive Entertainment</span>
               <p>Discover our new items. Up to 25% Off !</p>
-              <a href="">Shop Now</a>
+              <a href="./products/all.html">Shop Now</a>
               <img src="./public/images/Shop/image 12.svg" alt="" />
             </div>
           </div>
@@ -127,7 +127,7 @@
               <div class="box_left">
                 <span>Starting from 899$</span>
                 <p>Health Care Monitor</p>
-                <a href="">Shop Now</a>
+                <a href="./products/chosenProducts.html">Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
@@ -138,7 +138,7 @@
               <div class="box_left">
                 <span>Starting from 899$</span>
                 <p>Hanpicked Headphones</p>
-                <a href="">Shop Now</a>
+                <a href="./products/chosenProducts.html">Shop Now</a>
                 <div class="hover_border_2"></div>
               </div>
               <div class="box_right">
@@ -775,109 +775,111 @@
         </div>
       </div>
     </div>
-    <div class="footer_frame">
-      <div class="container">
-        <div class="footer_top">
-          <div class="footer_contact_box">
-            <span class="foter_spec_title">Contact us</span>
-            <div class="footer_contact_main">
-              <img src="./public/images/Shop/phone-call 1.svg" alt="" />
-              <div>
-                <strong>Monday-Friday: 08am-9pm</strong>
-                <span>+(1) 123 456 7890</span>
-              </div>
-            </div>
-            <div class="footer_contact_main">
-              <img src="./public/images/Shop/email 1.svg" alt="" />
-              <div>
-                <strong>Need help with your order?</strong>
-                <span>support@zenmart.com</span>
-              </div>
+    
+  </div>
+  <div class="footer_frame">
+    <div class="container">
+      <div class="footer_top">
+        <div class="footer_contact_box">
+          <span class="foter_spec_title">Contact us</span>
+          <div class="footer_contact_main">
+            <img src="./public/images/Shop/phone-call 1.svg" alt="" />
+            <div>
+              <strong>Monday-Friday: 08am-9pm</strong>
+              <span>+(1) 123 456 7890</span>
             </div>
           </div>
-          <div class="footer_support_box">
-            <span class="footer_spec_title" style="margin-bottom: 10px"
-              >Custumer Support</span
-            >
-            <a href="">Contact Us</a>
-            <a href="">Help Centre</a>
-            <a href="">Returns & Exchanges</a>
-            <a href="">Best Buy Financing</a>
-            <a href="">Best Buy Gift Card</a>
-          </div>
-          <div class="footer_support_box">
-            <span class="footer_spec_title" style="margin-bottom: 10px"
-              >Services</span
-            >
-            <a href="">Geek Squad</a>
-            <a href="">In-Home Advisor</a>
-            <a href="">Trade-In Program</a>
-            <a href="">Electronics Recycling</a>
-            <a href="">Best Buy Health</a>
-          </div>
-          <div class="footer_media_box">
-            <div class="footer_media_main">
-              <span class="footer_media_title">Follow us</span>
-              <div class="media_box">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-              </div>
-            </div>
-            <div class="footer_media_main">
-              <span class="footer_media_title" style="margin-top: 25px"
-                >Mobile Apps</span
-              >
-              <div class="media_app_box">
-                <img src="./public/images/Shop/apple 1.png" alt="" />
-                <span>iOS App</span>
-              </div>
-              <div class="media_app_box">
-                <img src="./public/images/Shop/android (1) 1.png" alt="" />
-                <span>Android App</span>
-              </div>
-            </div>
-          </div>
-          <div class="footer_media_box">
-            <div class="footer_media_main" style="margin-top: 130px">
-              <span class="footer_media_title">We Accept</span>
-              <div class="card_box">
-                <img src="./public/images/Shop/1 (1).png" alt="" />
-                <img src="./public/images/Shop/2.png" alt="" />
-                <img src="./public/images/Shop/3.png" alt="" />
-                <img src="./public/images/Shop/4.png" alt="" />
-                <img src="./public/images/Shop/5.png" alt="" />
-                <img src="./public/images/Shop/6.png" alt="" />
-              </div>
+          <div class="footer_contact_main">
+            <img src="./public/images/Shop/email 1.svg" alt="" />
+            <div>
+              <strong>Need help with your order?</strong>
+              <span>support@zenmart.com</span>
             </div>
           </div>
         </div>
-        <div class="footer_bottom">
-          <div class="footer_main">
-            <div class="footer_bottom_left">
-              <span>© 2022 Zenmart. All Rights Reserved</span>
-              <span>Privacy · Terms · Sitemap</span>
+        <div class="footer_support_box">
+          <span class="footer_spec_title" style="margin-bottom: 10px"
+            >Custumer Support</span
+          >
+          <a href="">Contact Us</a>
+          <a href="">Help Centre</a>
+          <a href="">Returns & Exchanges</a>
+          <a href="">Best Buy Financing</a>
+          <a href="">Best Buy Gift Card</a>
+        </div>
+        <div class="footer_support_box">
+          <span class="footer_spec_title" style="margin-bottom: 10px"
+            >Services</span
+          >
+          <a href="">Geek Squad</a>
+          <a href="">In-Home Advisor</a>
+          <a href="">Trade-In Program</a>
+          <a href="">Electronics Recycling</a>
+          <a href="">Best Buy Health</a>
+        </div>
+        <div class="footer_media_box">
+          <div class="footer_media_main">
+            <span class="footer_media_title">Follow us</span>
+            <div class="media_box">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
             </div>
-            <div class="footer_bottom_right">
-              <div class="footer_select_box">
-                <span>Currency</span>
-                <select name="" id="">
-                  <option value="" selected>USD</option>
-                  <option>UZS</option>
-                </select>
-              </div>
-              <div class="footer_select_box">
-                <span>Language</span>
-                <select name="" id="">
-                  <option value="">English</option>
-                  <option selected>Uzbek</option>
-                </select>
-              </div>
+          </div>
+          <div class="footer_media_main">
+            <span class="footer_media_title" style="margin-top: 25px"
+              >Mobile Apps</span
+            >
+            <div class="media_app_box">
+              <img src="./public/images/Shop/apple 1.png" alt="" />
+              <span>iOS App</span>
+            </div>
+            <div class="media_app_box">
+              <img src="./public/images/Shop/android (1) 1.png" alt="" />
+              <span>Android App</span>
+            </div>
+          </div>
+        </div>
+        <div class="footer_media_box">
+          <div class="footer_media_main" style="margin-top: 130px">
+            <span class="footer_media_title">We Accept</span>
+            <div class="card_box">
+              <img src="./public/images/Shop/1 (1).png" alt="" />
+              <img src="./public/images/Shop/2.png" alt="" />
+              <img src="./public/images/Shop/3.png" alt="" />
+              <img src="./public/images/Shop/4.png" alt="" />
+              <img src="./public/images/Shop/5.png" alt="" />
+              <img src="./public/images/Shop/6.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer_bottom">
+        <div class="footer_main">
+          <div class="footer_bottom_left">
+            <span>© 2022 Zenmart. All Rights Reserved</span>
+            <span>Privacy · Terms · Sitemap</span>
+          </div>
+          <div class="footer_bottom_right">
+            <div class="footer_select_box">
+              <span>Currency</span>
+              <select name="" id="">
+                <option value="" selected>USD</option>
+                <option>UZS</option>
+              </select>
+            </div>
+            <div class="footer_select_box">
+              <span>Language</span>
+              <select name="" id="">
+                <option value="">English</option>
+                <option selected>Uzbek</option>
+              </select>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
